--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,10 @@ wp-content/plugins/hello.php
 /sitemap.xml
 /sitemap.xml.gz
 
+
+# NPM packages used by Grunt.js
+/node_modules
+package-lock.json
+
+# NPM debug log
+npm-debug.log
